Changes to use qt4 portgroup. Upgrade to 0.9.8.3 for qt 4.7 fixes.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72602 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qtiplot/Portfile
+++ b/dports/aqua/qtiplot/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem  1.0
+PortGroup           qt4 1.0
 
 name                qtiplot
-version             0.9.7.9
-revision            2
+version             0.9.8.3
 categories          aqua science
 maintainers         jonas openmaintainer
 
@@ -22,16 +22,15 @@ homepage            http://soft.proindependent.com/qtiplot.html
 master_sites        http://download.berlios.de/qtiplot/
 use_bzip2           yes
 
-depends_lib         port:qt4-mac \
-                    port:muparser \
+depends_lib-append  port:muparser \
                     port:boost \
                     port:gsl \
                     port:libpng \
                     port:zlib
 
-checksums           md5     08e4943cadd5ee39e28e4ce0d61d475a \
-                    sha1    ad83187af31172794771012072b57a67f9288628 \
-                    rmd160  cd6cbef46b3474989bede96af04d1cef52dd6f48
+checksums           md5     317f45128eef208b2d6b9c28a2e3fa6e \
+                    sha1    e5ffdd25f1f69611f3f39a0b22e8c23959ab51e1 \
+                    rmd160  864e45bd9e74f3dd7526c84d387ab88438c1ee70
 
 patchfiles          patch-qtiplot-qtiplot.pro \
                     patch-qtiplot-src-scripting-scripting.pri
@@ -75,7 +74,7 @@ pre-configure {
 }
 
 configure.pre_args  "PREFIX=${prefix}"
-configure.cmd   "LOCALSOFT=${prefix} ${prefix}/libexec/qt4-mac/bin/qmake"
+configure.cmd   "LOCALSOFT=${prefix} ${qt_qmake_cmd}"
 destroot.destdir INSTALL_ROOT=${destroot}
 
 destroot {
