Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72603 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/LyX/Portfile
+++ b/dports/aqua/LyX/Portfile
@@ -2,9 +2,11 @@
 # $Id$
 
 PortSystem	        1.0
+PortGroup           qt4 1.0
 
 name			    LyX
 version			    1.6.7
+revision            1
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories	        aqua
 license             GPL
@@ -18,9 +20,7 @@ long_description	LyX is an advanced open source document processor \
 				    leaving details of visual layout to the software.
 
 platforms		    darwin
-depends_build	    port:pkgconfig
-depends_lib		    port:qt4-mac \
-				    bin:tex:texlive \
+depends_lib-append  bin:tex:texlive \
 				    port:ImageMagick
 
 use_bzip2		    yes
@@ -37,12 +37,9 @@ checksums           sha1    24f4edff7f31dd75c47862351ece0d1906cf2e75 \
 configure.pre_args  --prefix=${applications_dir}/LyX.app
 configure.args      --with-frontend=qt4 --without-x --with-included-gettext \
                     --enable-optimization=-Os --disable-concept-checks \
-                    --with-qt4-dir=${prefix}/libexec/qt4-mac \
                     --with-version-suffix=-1.6
 
-build.env           LD_FLAGS="-framework Carbon -framework OpenGL -framework AGL -framework QuickTime -framework Cocoa" \
-                    LD_LIBRARY_PATH=${prefix}/libexec/qt4-mac/lib \
-                    CPLUS_INCLUDE_PATH=${prefix}/libexec/qt4-mac/include
+build.env           LD_FLAGS="-framework Carbon -framework OpenGL -framework AGL -framework QuickTime -framework Cocoa"
 
 variant python25 conflicts python26 description {Use python25} {
     depends_build-append  port:python25
