Changes to use qt4 portgroup.
Move octave dependency to "bin:octave:octave" to use either octave or
octive-devel.


git-svn-id: https://svn.macports.org/repository/macports/trunk@72604 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qtoctave-mac/Portfile
+++ b/dports/aqua/qtoctave-mac/Portfile
@@ -1,7 +1,11 @@
+# -*- Mode: Tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:filetype=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 PortSystem          1.0
+PortGroup           qt4 1.0
+
 name                qtoctave-mac
 version             0.9.1
+revision            1
 categories          aqua math
 platforms           darwin
 maintainers         and.damore openmaintainer
@@ -13,17 +17,16 @@ long_description    QtOctave is a front-end for Octave. Octave is a high-level l
 homepage            http://qtoctave.wordpress.com
 distname            qtoctave-${version}
 master_sites        http://forja.rediris.es/frs/download.php/1760/
-depends_lib         port:octave \
-                    port:qt4-mac
+depends_lib-append  bin:octave:octave
 
-depends_build       bin:cmake:cmake
+depends_build-append port:cmake
 checksums           md5     a15edc82c6780dc3764052b04bf902f0 \
                     sha1    1d18058c7549a3f25cd648183db3d99ef755257e \
                     rmd160  9e4725cc2a52cfe9b7ec1e1b74becba8146b74f0
 
 configure.cmd       cmake
 configure.pre_args  -DCMAKE_INSTALL_PREFIX=${prefix}
-configure.args      -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake \
+configure.args      ${qt_cmake_defines} \
                     -G \"Unix Makefiles\" .
 
 use_bzip2           yes
