Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72605 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/QMK-Groundstation/Portfile
+++ b/dports/aqua/QMK-Groundstation/Portfile
@@ -3,9 +3,11 @@
 
 PortSystem          1.0
 PortGroup           xcode 1.0
+PortGroup           qt4 1.0
 
 name                QMK-Groundstation
 version             1.0.1
+revision            1
 maintainers         lilalinux.net:macports
 description         Configuration and Debugging Utility for the MikroKopter Project
 long_description    Configuration and Debugging Utility for the MikroKopter Project.
@@ -33,9 +35,7 @@ post-patch {
         ${worksrcpath}/osx.pro
 }
 
-set qt_dir ${prefix}/libexec/qt4-mac
-
-configure.cmd       ${qt_dir}/bin/qmake
+configure.cmd       ${qt_qmake_cmd}
 configure.pre_args  -spec macx-xcode osx.pro
 use_configure       yes
 
