Changes to use qt4 portgroup. Fix building for the specified ARCH and/or +universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72606 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qtpfsgui/Portfile
+++ b/dports/aqua/qtpfsgui/Portfile
@@ -1,10 +1,12 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem 1.0
+PortGroup       qt4 1.0
 
 name		qtpfsgui
 version		1.9.3
-revision        1
+revision        2
 categories	aqua graphics
 maintainers	gmail.com:clubjuggler openmaintainer
 description	GUI for HDR imaging workflow
@@ -13,19 +15,45 @@ long_description Qtpfsgui is an open source graphical user interface \
 platforms	darwin
 homepage	http://qtpfsgui.sourceforge.net/
 master_sites	sourceforge
-patchfiles      patch-app-path.diff
 
-depends_lib     port:qt4-mac port:exiv2 port:openexr \
-		port:ilmbase port:fftw-3-single port:tiff
+depends_lib-append \
+    port:exiv2 port:openexr \
+    port:ilmbase port:fftw-3-single port:tiff
 
 checksums       md5     5a6421391e373c912e4a793e131151c8 \
                 sha1    adf037c54f55be50d931fa484cca169c01d0384d \
                 rmd160  5188b2f1679d6788358067fe761d0c72c475bfe9
+
+patchfiles      patch-project.pro.diff
+
+post-patch {
+    # set ARCHES in project.pro (per the second patchfile),
+    set MP_ARCHES ""
+    if {[variant_exists universal] && [variant_isset universal]} {
+        # build for universal, as defined by the local user
+        set MP_ARCHES ${universal_archs}
+    } else {
+        # build arch specific
+        set MP_ARCHES ${build_arch}
+    }
+    array set macports_to_qt_build_arch {
+        ppc     ppc
+        i386    x86
+        ppc64   ppc64
+        x86_64  x86_64
+    }
+    set QT_ARCHES ""
+    foreach arch ${MP_ARCHES} {
+        set this_arch_in_qt $macports_to_qt_build_arch($arch)
+        lappend QT_ARCHES ${this_arch_in_qt}
+    }
+    set ARCHES [join ${QT_ARCHES} " "]
+    reinplace "s|@@ARCHES@@|${ARCHES}|g" ${worksrcpath}/project.pro
+}
 
 configure.pre_args  PREFIX="${prefix}"
 configure.args      APPLICATIONS_DIR="${applications_dir}" \
                     DOCDIR="${prefix}/share/doc/${name}" \
                     QMAKE_CC="\${CC}" \
                     QMAKE_CXX="\${CXX}"
-configure.cmd   "LOCALSOFT=${prefix} ${prefix}/libexec/qt4-mac/bin/qmake"
-destroot.destdir INSTALL_ROOT=${destroot}
+configure.cmd   "LOCALSOFT=${prefix} ${qt_qmake_cmd}"
