Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72607 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/TOra/Portfile
+++ b/dports/aqua/TOra/Portfile
@@ -2,9 +2,11 @@
 # $Id$
 
 PortSystem              1.0
+PortGroup               qt4 1.0
 
 name                    TOra
 version                 2.1.3
+revision                1
 description             GUI tool for Oracle, PostgreSQL, and MySQL
 long_description        Database developer/DBA frontend for various DB servers.
 maintainers             scribus.info:petr
@@ -24,7 +26,6 @@ depends_build           port:cmake
 # It's dangerous to mix library versions in one binary. It's required
 # to spot qt4-mac's dependencies' version bumps.
 depends_lib             port:postgresql83 \
-                        port:qt4-mac \
                         port:qscintilla \
                         port:oracle-instantclient
 
@@ -45,7 +46,7 @@ configure.args          -DCMAKE_LIBRARY_PATH=${prefix}/lib \
                         -DWANT_RPM=0 \
                         -DWANT_INTERNAL_QSCINTILLA=0 \
                         -DENABLE_DB2=0 \
-                        -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake .
+                        ${qt_cmake_defines} .
 
 # qscintilla is not universal
 universal_variant       no
