--- a/dports/databases/sqliteman/Portfile
+++ b/dports/databases/sqliteman/Portfile
@@ -2,10 +2,10 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                sqliteman
-version             1.2.1
-revision            1
+version             1.2.2
 description         GUI tool for Sqlite3
 long_description	The best developer's and/or admin's GUI tool for Sqlite3 in the world. \
                     No joking here (or just a bit only) - it contains the most complete \
@@ -16,17 +16,17 @@ platforms	        darwin
 homepage	        http://www.sqliteman.com/
 master_sites        sourceforge:sqliteman
 
-checksums           md5     1ad603d38e4eda63f1386c6ee22a2838 \
-                    sha1    a0ea03cfa9b95f38d5d1f1db926537d61a0c5c01 \
-                    rmd160  19f7e82ab49480bf1d45e8506ed71e4da6ce1f47
+checksums           md5     c8197428739bcd86deaafa8ef267e3cb \
+                    sha1    8ca90d44ad0eda9e67bdd675523a8786b8ef3818 \
+                    rmd160  6aa1002c53f7204d2172e88c4a335670f9103135
 
 patchfiles          patch-litemanwindow.cpp.diff
 
 use_bzip2           yes
 
-depends_build       port:cmake
+depends_build-append port:cmake
 
-depends_lib         port:sqlite3    \
+depends_lib-append  port:sqlite3    \
                     port:qscintilla
 
 # qscintilla is not universal
@@ -35,6 +35,5 @@ universal_variant   no
 configure.cmd       cmake
 configure.pre_args  \
     -DCMAKE_INSTALL_PREFIX=${prefix} \
-    -DQSCINTILLA_INCLUDE_DIR:PATH=${prefix}/libexec/qt4-mac/include/Qsci \
-    -DQT_ZLIB_LIBRARY:FILEPATH=${prefix}/lib/libz.dylib
-configure.args      -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake
+    -DQSCINTILLA_INCLUDE_DIR:PATH=${qt_includes_dir}/Qsci
+configure.args      ${qt_cmake_defines}
