Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72609 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/mlt/Portfile
+++ b/dports/multimedia/mlt/Portfile
@@ -2,9 +2,10 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                mlt
-epoch               1
+epoch               2
 version             0.5.10
 categories          multimedia
 maintainers         dennedy.org:dan
@@ -28,11 +29,10 @@ checksums           sha1    e0b3d8f77ad6d97d6495614e78dfbbb531e70f77 \
 # ffmpeg-devel is not universal
 universal_variant   no
 
-depends_build       port:pkgconfig \
-                    port:git-core \
+depends_build-append port:git-core \
                     port:doxygen
 
-depends_lib         port:atk \
+depends_lib-append  port:atk \
                     port:frei0r-plugins \
                     path:lib/libavcodec.dylib:ffmpeg \
                     port:gtk2 \
@@ -40,12 +40,11 @@ depends_lib         port:atk \
                     port:libsamplerate \
                     path:lib/pkgconfig/sdl.pc:libsdl \
                     port:libvorbis \
-                    port:qt4-mac \
                     port:sox
 
 configure.args      --enable-gpl \
-                    --qimage-libdir=${prefix}/libexec/qt4-mac/lib \
-                    --qimage-includedir=${prefix}/libexec/qt4-mac/include/Qt \
+                    --qimage-libdir=${qt_libs_dir} \
+                    --qimage-includedir=${qt_includes_dir}/Qt \
                     --disable-jackrack \
                     --disable-mmx
 
@@ -55,15 +54,12 @@ platform darwin 10 {
     }
 }
 
-configure.pkg_config_path   ${prefix}/lib/pkgconfig:${prefix}/libexec/qt4-mac/lib/pkgconfig
-configure.pkg_config        ${prefix}/bin/pkg-config
-
 configure.cflags-append     "-I${prefix}/include"
-configure.cflags-append     "-I${prefix}/libexec/qt4-mac/include"
+configure.cflags-append     "-I${qt_includes_dir}"
 configure.ldflags-delete    "-L${prefix}/lib"
 configure.ldflags-append    "-L${worksrcpath}/src/framework"
 configure.ldflags-append    "-L${prefix}/lib"
-build.env                   CFLAGS="${configure.cflags}" LDFLAGS="${configure.ldflags}"
+build.env-append            CFLAGS="${configure.cflags}" LDFLAGS="${configure.ldflags}"
 build.args-append           CC="${configure.cc}" CXX="${configure.cxx}" CPP="${configure.cpp}"
 
 variant no_x11 {
