Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72610 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/VLC/Portfile
+++ b/dports/multimedia/VLC/Portfile
@@ -6,7 +6,7 @@ PortSystem          1.0
 
 name                VLC
 version             1.0.6
-revision            1
+revision            2
 
 categories          multimedia
 
@@ -206,13 +206,12 @@ variant qt4 description {Build using QT4 UI.  This will use qt4-x11 if +x11 and 
         patchfiles-append patch-qt4-x11.diff
         set qt_dir ${prefix}/libexec/qt4-x11
         configure.cppflags-append -D__USE_WS_X11__
+        configure.env-append QTDIR=${qt_dir}
+        set env(PATH) "${qt_dir}/bin:$env(PATH)"
+        configure.pkg_config_path "${configure.pkg_config_path}:${qt_dir}/lib/pkgconfig"
     } else {
-        depends_lib-append port:qt4-mac
-        set qt_dir ${prefix}/libexec/qt4-mac
+        PortGroup qt4 1.0
     }
-    configure.env-append QTDIR=${qt_dir}
-    set env(PATH) "${qt_dir}/bin:$env(PATH)"
-    configure.pkg_config_path "${configure.pkg_config_path}:${qt_dir}/lib/pkgconfig"
 }
 
 platform macosx {
