--- a/dports/multimedia/lmms/Portfile
+++ b/dports/multimedia/lmms/Portfile
@@ -3,9 +3,11 @@
 
 PortSystem          1.0
 PortGroup           cmake 1.0
+PortGroup           qt4 1.0
 
 name                lmms
 version             0.4.8
+revision            1
 categories          multimedia
 maintainers         nomaintainer
 
@@ -24,7 +26,6 @@ checksums           md5     8573b8376808c77c058cca3a57a36d8d \
 
 depends_build-append port:pkgconfig
 depends_lib         port:libsndfile \
-                    port:qt4-mac \
                     path:lib/pkgconfig/sdl.pc:libsdl \
                     port:fftw-3-single \
                     port:fluidsynth \
