Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72613 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/poppler/Portfile
+++ b/dports/graphics/poppler/Portfile
@@ -6,6 +6,7 @@ PortGroup  muniversal 1.0
 
 name        poppler
 version     0.14.4
+revision    1
 maintainers devans openmaintainer
 categories  graphics
 platforms   darwin
@@ -59,15 +60,14 @@ if {![variant_isset quartz]} {
 variant qt4 description { Support for the QT4 toolkit } {
     configure.args-delete --disable-poppler-qt4
     if ([variant_isset quartz]) {
-        depends_lib-append  port:qt4-mac
-        set qt_dir ${prefix}/libexec/qt4-mac
+        PortGroup qt4 1.0
     } else {
         depends_lib-append  port:qt4-x11
         set qt_dir ${prefix}/libexec/qt4-x11
+        configure.env-append  QTDIR=${qt_dir}
+        set env(PATH) "${qt_dir}/bin:$env(PATH)"
+        configure.pkg_config_path ${qt_dir}/lib/pkgconfig
     }
-    configure.env-append  QTDIR=${qt_dir}
-    set env(PATH) "${qt_dir}/bin:$env(PATH)"
-    configure.pkg_config_path ${qt_dir}/lib/pkgconfig
 }
 
 variant docs conflicts universal description {Build gtk-doc documentation} {
