Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72614 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/vtk5/Portfile
+++ b/dports/graphics/vtk5/Portfile
@@ -148,14 +148,14 @@ variant python26 description {Build Python 2.6 wrappers} conflicts python25 {
 }
 
 variant qt4_mac conflicts x11 description {Build GUI support with Qt4 (Mac)} {
-    depends_build-append    port:qt4-mac
+    PortGroup     qt4 1.0
     configure.args-append   -DVTK_USE_QT:BOOL=ON \
                             -DVTK_USE_GUISUPPORT:BOOL=ON
 
     post-destroot {
-        xinstall -d ${destroot}${prefix}/libexec/qt4-mac/plugins/designer
+        xinstall -m 755 -d ${destroot}${qt_plugins_dir}/designer
         move ${destroot}${prefix}/plugins/designer/libQVTKWidgetPlugin.dylib \
-            ${destroot}${prefix}/libexec/qt4-mac/plugins/designer/
+            ${destroot}${qt_plugins_dir}/designer/
     }
 }
 
