Fix designer plugin location setting. Fix +x11 variant to use new qt4 portgroup properly. Correct self-id of installed plugins and libraries.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72615 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/libQGLViewer/Portfile
+++ b/dports/graphics/libQGLViewer/Portfile
@@ -5,6 +5,7 @@ PortSystem                      1.0
 
 name                            libQGLViewer
 version                         2.3.6
+revision                        1
 platforms                       darwin
 maintainers                     raphael openmaintainer
 license                         GPL-2+ Commercial
@@ -27,19 +28,26 @@ checksums                       md5     74453a6e50dcdf3044c0f9d5f93f3db0 \
                                 sha1    4d9089e8b5af2f52ece46a984efb5e54f5a90cfd \
                                 rmd160  799c2f1651796ab0a83230d65d827ad75e01e504
 
-depends_lib                     port:qt4-mac
-
 patchfiles                      patch-QGLViewer.pro.diff \
                                 patch-designerPlugin.pro.diff
-post-patch {                    reinplace "s|@@PREFIX@@|${prefix}|g" ${worksrcpath}/QGLViewer/QGLViewer.pro
-                                if {[variant_isset x11]} {
-                                    reinplace "s|qt4-mac|qt4-x11|g" ${worksrcpath}/designerPlugin/designerPlugin.pro
-                                }
+
+variant x11 description {Use X11 for visualization} {}
+
+if {![variant_isset x11]} {
+    PortGroup                   qt4 1.0
+    configure.cmd               ${qt_qmake_cmd}
+} else {
+    depends_lib-append          port:qt4-x11
+    configure.cmd               ${prefix}/libexec/qt4-x11/bin/qmake
+    set qt_plugins_dir          ${prefix}/libexec/qt4-x11/plugins/designer
 }
 
-configure.cmd                   ${prefix}/libexec/qt4-mac/bin/qmake
-configure.pre_args              PREFIX=${destroot}${prefix} \
-                                DOC_DIR=${destroot}${prefix}/share/doc/${name} \
+post-patch {                    reinplace "s|@@PREFIX@@|${prefix}|g" ${worksrcpath}/QGLViewer/QGLViewer.pro
+                                reinplace "s|@@QT_PLUGINS_DIR@@|${qt_plugins_dir}|g" ${worksrcpath}/designerPlugin/designerPlugin.pro
+}
+
+configure.pre_args              PREFIX=${prefix} \
+                                DOC_DIR=${prefix}/share/doc/${name} \
                                 -after QMAKE_POST_LINK=
 configure.universal_args
 
@@ -47,18 +55,20 @@ use_parallel_build              no
 
 post-destroot {                 system "cd ${worksrcpath}/examples && make clean"
                                 copy ${worksrcpath}/examples ${destroot}${applications_dir}/libQGLViewer\ Examples
+                                xinstall -m 755 -d ${destroot}${prefix}/share/doc/${name}
                                 xinstall -m 644 -W ${worksrcpath} \
                                      CHANGELOG \
                                      GPL_EXCEPTION \
                                      LICENCE \
                                      README \
                                      ${destroot}${prefix}/share/doc/${name}
-}
 
-variant x11 description {Use X11 for visualization} {
-depends_lib-delete              port:qt4-mac
-depends_lib-append              port:qt4-x11
-configure.cmd                   ${prefix}/libexec/qt4-x11/bin/qmake
+    # Fix import and plugin library ID (self name)
+    foreach fixfile [exec find ${destroot}${prefix} \
+                         -name "*.dylib" -type f | \
+                         sed -e "s@${destroot}@@g" ] {
+        system "install_name_tool -id ${fixfile} ${destroot}${fixfile}"
+    }
 }
 
 livecheck.type                  regex
