Changes to use qt4 portgroup. Remove dependencies that are fulfilled by qt4-mac.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72616 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/scantailor/Portfile
+++ b/dports/graphics/scantailor/Portfile
@@ -3,9 +3,11 @@
 
 PortSystem                      1.0
 PortGroup                       cmake 1.0
+PortGroup                       qt4 1.0
 
 name                            scantailor
 version                         0.9.9.1
+revision                        1
 platforms                       darwin
 maintainers                     raphael openmaintainer
 license                         GPL-3+
@@ -19,12 +21,7 @@ long_description                Scan Tailor is an interactive post-processing to
                                 DJVU file. Scanning, optical character recognition, and \
                                 assembling multi-page documents are out of scope of this project.
 
-depends_lib                     port:qt4-mac \
-                                port:jpeg \
-                                port:zlib \
-                                port:libpng \
-                                port:tiff \
-                                port:boost
+depends_lib-append              port:boost
 
 master_sites                    sourceforge
 
