Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72617 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/GLC_lib/Portfile
+++ b/dports/graphics/GLC_lib/Portfile
@@ -2,20 +2,19 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 categories          graphics
 platforms           darwin
 
 name                GLC_lib
 version             1.2.0
-revision            2
+revision            3
 maintainers         lilalinux.net:macports
 description         C++ class library that enables the quick creation of an OpenGL application based on QT4.
 long_description    C++ class library that enables the quick creation of an OpenGL application based on QT4.
 
 homepage            http://www.glc-lib.net/
-
-depends_lib         port:qt4-mac port:zlib
 
 master_sites        sourceforge:glc-lib
 distname            ${name}_src_${version}
@@ -31,23 +30,19 @@ post-patch {
     reinplace       s|@@PREFIX@@|${prefix}|g ${worksrcpath}/glc_lib/GLC_lib.pro
 }
 
-set qt_dir          ${prefix}/libexec/qt4-mac
-
 configure.pre_args  INSTALLDIR=${prefix}/lib
-configure.cmd       ${qt_dir}/bin/qmake glc_lib/GLC_lib.pro PREFIX=${prefix}
+configure.cmd       ${qt_qmake_cmd} glc_lib/GLC_lib.pro PREFIX=${prefix}
 
 use_parallel_build  yes
 
 build.args          CC=${configure.cc}
-build.env           QTDIR=${qt_dir} PREFIX=${prefix}
+build.env-append    PREFIX=${prefix}
 
 post-build {
 	system "install_name_tool -id	\
 		${qt_dir}/lib/libGLC_lib.dylib	\
 		${worksrcpath}/libGLC_lib.dylib"
 }
-
-destroot.env        QTDIR=${qt_dir} INSTALL_ROOT=${destroot}
 
 livecheck.type      regex
 livecheck.url       http://sourceforge.net/api/file/index/project-id/153150/mtime/desc/rss?path=%2Fglc-lib
