Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72618 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/qwt52/Portfile
+++ b/dports/graphics/qwt52/Portfile
@@ -5,6 +5,7 @@ PortSystem          1.0
 
 name                qwt52
 version             5.2.1
+revision            1
 conflicts           qwt
 categories          graphics science
 maintainers         michaelld
@@ -30,17 +31,14 @@ platforms           darwin
 
 patchfiles          patch-qwtconfig.pri.diff
 
-variant qt3 conflicts qt4 description {Use qt3-mac} {
-    depends_lib-append  port:qt3-mac
-}
+variant qt3 conflicts qt4 description {Use qt3-mac} {}
 
-variant qt4 conflicts qt3 description {Use qt4-mac} {
-    depends_lib-append  port:qt4-mac
-}
+variant qt4 conflicts qt3 description {Use qt4-mac} {}
 
 # move setting of 'qt_dir' outside variants, since 'if' statements are
 # processed in-order while variants are processed after everything else.
 if {[variant_isset qt3]} {
+    depends_lib-append  port:qt3-mac
     set qt_dir          ${prefix}/libexec/qt3-mac
 } else {
     # when variant 'qt3' is not set, use qt4 whether by default or via
@@ -48,7 +46,7 @@ if {[variant_isset qt3]} {
     if {![variant_isset qt4]} {
         default_variants    +qt4
     }
-    set qt_dir          ${prefix}/libexec/qt4-mac
+    PortGroup           qt4 1.0
 }
 
 configure.cmd       ${qt_dir}/bin/qmake
@@ -65,7 +63,7 @@ post-destroot {
     system "install_name_tool -id ${libqwt_file} ${destroot}${libqwt_file}"
 
     # (2) fix the install name of the plugin
-    set plugin_file [exec find ${destroot}${qt_dir}/plugins/designer -type f | \
+    set plugin_file [exec find ${destroot}${qt_plugins_dir}/designer -type f | \
                          sed -e "s@${destroot}@@g"]
     system "install_name_tool -id ${plugin_file} ${destroot}${plugin_file}"
 
