Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72619 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/ipe/Portfile
+++ b/dports/graphics/ipe/Portfile
@@ -1,9 +1,11 @@
 # $Id$
 
 PortSystem 1.0
+PortGroup               qt4 1.0
 
 name                    ipe
 version                 7.0.10
+revision                1
 categories              graphics
 maintainers             jacobs-university.de:m.thon
 description             The Ipe extensible drawing editor
@@ -21,16 +23,13 @@ worksrcdir              ${name}-${version}/src
 checksums               md5 3116ccb41d244d7e4ef92198d6d82052 \
                         sha1 dc18230bb669b759b132c66440d99596b52fb833 \
                         rmd160 1d57d362de66a5e718baf80ef79a6681ee48e046
-depends_lib             port:qt4-mac \
-                        port:freetype \
+depends_lib-append      port:freetype \
                         port:cairo \
-                        port:lua \
-                        port:zlib
+                        port:lua
 patchfiles              patch-common.mak.diff \
                         patch-config.mak.diff \
                         patch-ipe-lua-prefs.lua.diff
 use_configure           no
-build.args              IPEPREFIX=${prefix} MOC=${prefix}/libexec/qt4-mac/bin/moc \
-                        PKG_CONFIG_PATH=${prefix}/libexec/qt4-mac/lib/pkgconfig
-destroot.args           INSTALL_ROOT=${destroot} IPEPREFIX=${prefix}
+build.args              IPEPREFIX=${prefix} MOC=${qt_moc_cmd}
+destroot.args-append    IPEPREFIX=${prefix}
 use_parallel_build      no
