Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72620 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/lprof/Portfile
+++ b/dports/graphics/lprof/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem          1.0
+PortGroup           qt4 1.0
 
 name                lprof
 version             20090113
-revision            3
+revision            4
 categories          graphics
 license             GPL
 maintainers         nomaintainer
@@ -24,8 +25,8 @@ cvs.root            :pserver:anonymous@lprof.cvs.sourceforge.net:/cvsroot/lprof
 cvs.date            ${version}
 cvs.module          lprof
 
-depends_lib         port:qt4-mac port:libusb-compat
-depends_build       port:cmake
+depends_lib-append  port:libusb-compat
+depends_build-append port:cmake
 
 worksrcdir          lprof
 
@@ -39,8 +40,8 @@ configure.args      -DCMAKE_BUILD_WITH_INSTALL_RPATH=ON \
                     -DCMAKE_INSTALL_NAME_DIR=${prefix}/lib/ \
                     -DCMAKE_INCLUDE_PATH=${prefix}/include \
                     -DCMAKE_LIBRARY_PATH=${prefix}/lib \
-                    -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake \
-                    -DQTTRANS_LRELEASE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/lrelease \
+                    ${qt_cmake_defines} \
+                    -DQTTRANS_LRELEASE_EXECUTABLE=${qt_lrelease_cmd} \
                     -Wno-dev .
 
 if {[info exists universal_sysroot]} {
