--- a/dports/graphics/Quarter/Portfile
+++ b/dports/graphics/Quarter/Portfile
@@ -1,10 +1,12 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem		1.0
+PortGroup               qt4 1.0
 
 name			Quarter
 version			1.0.0
-revision		2
+revision		3
 description		integrates Coin and Qt
 long_description	Quarter is a light-weight glue library that provides \
     seamless integration between Kongsberg SIM's Coin high-level 3D \
@@ -20,9 +22,8 @@ checksums           md5     73d7c9e1917436e29b128781c997185f \
                     sha1    f141490008c3139cb8f01c71148e2dd8802a97d0 \
                     rmd160  d954cac8d35e83ffb565c28fd3e28864b8dfa023
 
-configure.env-append    QTDIR=${prefix}/libexec/qt4-mac/
-configure.ldflags-append    -L${prefix}/libexec/qt4-mac/lib
-configure.cppflags-append   -I${prefix}/libexec/qt4-mac/include
-configure.args-append       --with-qt-designer-plugin-path=${prefix}/libexec/qt4-mac/plugins/designer
+configure.ldflags-append    -L${qt_libs_dir}
+configure.cppflags-append   -I${qt_includes_dir}
+configure.args-append       --with-qt-designer-plugin-path=${qt_plugins_dir}/designer
 
-depends_lib		port:qt4-mac port:Coin
+depends_lib-append	    port:Coin
