--- a/dports/graphics/qwtplot3d/Portfile
+++ b/dports/graphics/qwtplot3d/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                qwtplot3d
 version             0.2.7
-revision            2
+revision            3
 categories          graphics science
 platforms           darwin
 maintainers         michaelld
@@ -23,17 +23,14 @@ checksums           md5    2f14660152e2e26bfeaaeec479ed9f2b \
                     sha1   4463fafb8420a91825e165da7a296aaabd70abea \
                     rmd160 0f28462cb95ef6091d73642c8b26ece60d50bfb8
 
-variant qt3 conflicts qt4 description {Use qt3-mac} {
-    depends_lib-append  port:qt3-mac
-}
+variant qt3 conflicts qt4 description {Use qt3-mac} {}
 
-variant qt4 conflicts qt3 description {Use qt4-mac} {
-    depends_lib-append  port:qt4-mac
-}
+variant qt4 conflicts qt3 description {Use qt4-mac} {}
 
 # move setting of 'qt_dir' outside variants, since 'if' statements are
 # processed in-order while variants are processed after everything else.
 if {[variant_isset qt3]} {
+    depends_lib-append  port:qt3-mac
     set qt_dir          ${prefix}/libexec/qt3-mac
 } else {
     # when variant 'qt3' is not set, use qt4 whether by default or via
@@ -41,10 +38,10 @@ if {[variant_isset qt3]} {
     if {![variant_isset qt4]} {
         default_variants    +qt4
     }
-    set qt_dir          ${prefix}/libexec/qt4-mac
+    PortGroup           qt4 1.0
 }
 
-configure.cmd       ${qt_dir}/bin/qmake
+configure.cmd       ${qt_qmake_cmd}
 configure.pre_args  
 
 variant qwt conflicts qwt52 description {Use qwt} {
