Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72623 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gst-plugins-base/Portfile
+++ b/dports/gnome/gst-plugins-base/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                gst-plugins-base
 version             0.10.30
-revision            2
+revision            3
 description         This is gst-plugins, a set of plug-ins for GStreamer.
 long_description    ${description}
 maintainers         rmstonecipher openmaintainer
@@ -42,7 +42,8 @@ variant no_x11 {
 }
 
 variant examples description {Build example programs} {
-    depends_lib-append port:gtk2 port:qt4-mac
+    PortGroup qt4 1.0
+    depends_lib-append port:gtk2
     configure.args-delete --disable-examples
 }
 
