--- a/dports/security/ophcrack/Portfile
+++ b/dports/security/ophcrack/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 
 name                ophcrack
 version             3.3.1
-revision            1
+revision            2
 categories          security
 maintainers         gmail.com:cedric.luthi
 description         Microsoft Windows password cracker
@@ -73,10 +73,9 @@ post-activate {
 }
 
 variant gui description {Builds the GUI version instead of the CLI version, requires the qt4-mac port} {
-    depends_lib-append port:qt4-mac
-    
+    PortGroup qt4 1.0
     configure.args-delete --disable-gui
-    configure.args-append --with-libqt4=${prefix}/libexec/qt4-mac
+    configure.args-append --with-libqt4=${qt_dir}
 }
 
 variant tables description {Installs the free rainbow tables for Windows XP and Vista (700+ MB)} {
