Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72625 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/Vidalia/Portfile
+++ b/dports/security/Vidalia/Portfile
@@ -6,7 +6,7 @@ PortGroup           cmake 1.0
 
 name                Vidalia
 version             0.2.9
-revision            1
+revision            2
 categories          security net aqua
 maintainers         mnick openmaintainer
 description         Vidalia is a controller GUI for the Tor software
@@ -31,10 +31,8 @@ destroot {
 }
 
 variant qt_mac conflicts qt_x11 description {build with qt4-mac} {
-    depends_lib-append port:qt4-mac
-    configure.args  \
-        -DQT_LIBRARY_DIR=${prefix}/libexec/qt4-mac/lib \
-        -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake
+    PortGroup qt4 1.0
+    configure.args ${qt_cmake_defines}
 }
 
 variant qt_x11 conflicts qt_mac description {build with qt4-x11} {
