Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72626 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/security/pinentry/Portfile
+++ b/dports/security/pinentry/Portfile
@@ -5,6 +5,7 @@ PortSystem                  1.0
 
 name                        pinentry
 version                     0.8.0
+revision                    1
 categories                  security
 maintainers                 nomaintainer
 homepage                    http://www.gnupg.org/aegypten2
@@ -60,15 +61,12 @@ variant qt3 description {Enable qt3 pinentry} {
 }
 
 variant qt4 description {Enable qt4 pinentry} {
-    depends_lib             port:qt4-mac
-    configure.env-append    QTDIR=${prefix}/libexec/qt4-mac \
-                            MOC=${prefix}/libexec/qt4-mac/bin/moc
+    PortGroup qt4 1.0
     configure.args-delete   --disable-pinentry-qt4
     configure.args-append   --enable-pinentry-qt4 \
                             --enable-fallback-curses \
-                            --with-qt-includes=${prefix}/libexec/qt4-mac/include \
-                            --with-qt-libraries=${prefix}/libexec/qt4-mac/lib \
-                            PKG_CONFIG_PATH=${prefix}/libexec/qt4-mac/lib/pkgconfig
+                            --with-qt-includes=${qt_includes_dir} \
+                            --with-qt-libraries=${qt_libs_dir}
 }
 
 platform darwin {
