Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72627 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/sigil/Portfile
+++ b/dports/editors/sigil/Portfile
@@ -3,10 +3,11 @@
 # vim: set fileencoding=utf-8 tabstop=8 shiftwidth=4 softtabstop=4 noexpandtab filetype=tcl :
 
 PortSystem	    1.0
+PortGroup       qt4 1.0
 
 name		    sigil
 version		    0.1.9
-revision	    1
+revision	    2
 platforms	    darwin
 categories	    editors
 maintainers	    macports.org:krischik
@@ -27,15 +28,12 @@ checksums           md5     2025d332e221733a5d70919001c2e9c6 \
                     sha1    3e7266d0d6577da3ad808acc09833ef378d860d7 \
                     rmd160  38654c326299e69a8def0c6fecdbdfb89116e891
 
-depends_build       bin:cmake:cmake \
+depends_build-append bin:cmake:cmake \
 		    bin:gmake:gmake
-depends_lib	    port:qt4-mac
 
-configure.env	    PATH="${prefix}/libexec/qt4-mac/bin:$env(PATH)"
 configure.cmd	    "cmake"
 configure.args	    "-G \"Unix Makefiles\" ${workpath}/Sigil-${version}-Code"
 
-build.env	    PATH="${prefix}/libexec/qt4-mac/bin:$env(PATH)"
 build.cmd	    "gmake"
 build.args	    ""
 build.target	    "Sigil"
