Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72628 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/tea/Portfile
+++ b/dports/editors/tea/Portfile
@@ -2,10 +2,11 @@
 # $Id$
 
 PortSystem              1.0
+PortGroup               qt4 1.0
 
 name                    tea
 version                 25.1.0
-revision                1
+revision                2
 description             TEA is the powerful text editor for GNU/Linux and *BSD.
 long_description        ${description}
 maintainers             nomaintainer
@@ -18,12 +19,11 @@ checksums               md5     072f7d60db0b5ffb6f0b3411af22620e \
                         sha1    49d3c2d5058652f527ea82f6fe1e0c69f6d8433f \
                         rmd160  1c2dc1173038a5a0334dff3c6fd56501bb28dd20
 
-depends_lib             port:qt4-mac \
-                        port:aspell
+depends_lib-append      port:aspell
 
 use_bzip2               yes
 
-configure.cmd           ${prefix}/libexec/qt4-mac/bin/qmake
+configure.cmd           ${qt_qmake_cmd}
 configure.pre_args
 configure.universal_args
 
