Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72629 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/root/Portfile
+++ b/dports/science/root/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 
 name                root
 version             5.26.00b
-revision            6
+revision            7
 categories          science
 maintainers         gmail.com:mattiafrancescomoro
 license             LGPLv2.1
@@ -179,6 +179,7 @@ variant qt_x11 conflicts qt_mac description {Builds port with Qt support via X11
 }
 
 variant qt_mac conflicts qt_x11 description {Builds port with Qt support via Mac UI} {
+    PortGroup qt4 1.0
     post-patch {
         # fix where "qglobal.h" is found in all files that use or reference it
         foreach tpf { configure graf2d/qt/src/TGQt.cxx } {
@@ -193,14 +194,12 @@ variant qt_mac conflicts qt_x11 description {Builds port with Qt support via Mac
             ${worksrcpath}/configure
     }
 
-    configure.env-append    QTDIR=${prefix}/libexec/qt4-mac
     configure.args-delete   --disable-qt
     configure.args-append   --enable-qt
-    depends_lib-append      port:qt4-mac
 
     post-configure {
         # patch up the Makefile.config to handle the QTLIB frameworks correctly
-        reinplace "/QTLIB\[ \]/s@:= @:= -F${prefix}/libexec/qt4-mac/lib @" \
+        reinplace "/QTLIB\[ \]/s@:= @:= -F${qt_libs_dir} @" \
             ${worksrcpath}/config/Makefile.config
         reinplace "/QTLIB\[ \]/s@\\(Qt\[^ \]*\\).la@-framework \\1@g" \
             ${worksrcpath}/config/Makefile.config
