Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72630 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/gnuradio-qtgui/Portfile
+++ b/dports/science/gnuradio-qtgui/Portfile
@@ -4,9 +4,11 @@
 PortSystem 1.0
 PortGroup muniversal 1.0
 PortGroup archcheck 1.0
+PortGroup qt4 1.0
 
 name            gnuradio-qtgui
 version         3.3.0
+revision        1
 maintainers     michaelld
 description     Qt GUI component of GNU Radio.
 long_description Qt GUI component of GNU Radio: \
@@ -38,16 +40,6 @@ archcheck.files lib/libgnuradio-core.dylib \
 # fix various 'time' functions that are not on OSX;
 # should be unnecessary in version 3.3.1.
 patchfiles      patch_gr-qtgui_src_lib_highResTimeFunctions.h.diff
-
-# for now ... use 'qmake' in the future
-set qt_dir      ${prefix}/libexec/qt4-mac
-
-# prepend Qt's PKGCONFIG path to whatever is there now.
-if {${configure.pkg_config_path} == ""} {
-    configure.pkg_config_path ${prefix}/lib/pkgconfig:${qt_dir}/lib/pkgconfig
-} else {
-    configure.pkg_config_path ${prefix}/lib/pkgconfig:${qt_dir}/lib/pkgconfig:${configure.pkg_config_path}
-}
 
 configure.args  --disable-all-components \
                 --with-gruel \
