Remove redundant dependency on qt4-mac.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72631 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/emergent/Portfile
+++ b/dports/science/emergent/Portfile
@@ -4,7 +4,7 @@ PortSystem      1.0
 
 name            emergent
 version         5.0.0
-revision        1
+revision        2
 categories      science
 platforms       darwin
 maintainers     nomaintainer
@@ -29,4 +29,4 @@ build.dir       ${worksrcpath}/build
 use_parallel_build  yes
 
 depends_build   bin:cmake:cmake
-depends_lib     port:readline port:qt4-mac port:Coin port:Quarter port:gsl port:ode
+depends_lib     port:readline port:Quarter port:gsl port:ode
