Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72632 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/stellarium/Portfile
+++ b/dports/science/stellarium/Portfile
@@ -2,6 +2,7 @@
 # $Id$
 
 PortSystem 1.0
+PortGroup  qt4 1.0
 
 name            stellarium
 version         0.10.5
@@ -24,10 +25,9 @@ checksums       md5     4038585e3554febde92f2166d52bc8a8 \
                 sha1    584ab8e3618bf9a0b15619260fbe240843a8f5e1 \
                 rmd160  dc4e942a4767e7afac62e766f4c11888fafe1c45
 
-depends_build   port:cmake
-depends_lib     port:qt4-mac \
+depends_build-append port:cmake
+depends_lib-append \
                 port:freetype \
-                port:zlib \
                 port:libiconv \
                 port:openssl
 
@@ -57,11 +57,11 @@ platform darwin 9 {
 }
 
 platform darwin 10 {
-    # Upgrade MacOSX SDK version to 10.5, for compatibility with qt4-mac
+    # Upgrade MacOSX SDK version to 10.6, for compatibility with qt4-mac
     post-patch {
-        reinplace "s:-mmacosx-version-min=10.4:-mmacosx-version-min=10.5:" ${worksrcpath}/CMakeLists.txt
-        reinplace "s:SET(CMAKE_OSX_DEPLOYMENT_TARGET \"10.4\"):SET(CMAKE_OSX_DEPLOYMENT_TARGET \"10.5\"):" ${worksrcpath}/CMakeLists.txt
-        reinplace "s:MacOSX10.4u.sdk:MacOSX10.5.sdk:" ${worksrcpath}/CMakeLists.txt
+        reinplace "s:-mmacosx-version-min=10.4:-mmacosx-version-min=10.6:" ${worksrcpath}/CMakeLists.txt
+        reinplace "s:SET(CMAKE_OSX_DEPLOYMENT_TARGET \"10.4\"):SET(CMAKE_OSX_DEPLOYMENT_TARGET \"10.6\"):" ${worksrcpath}/CMakeLists.txt
+        reinplace "s:MacOSX10.4u.sdk:MacOSX10.6.sdk:" ${worksrcpath}/CMakeLists.txt
     }
 }
 
@@ -71,13 +71,13 @@ configure.pre_args  -DFreeType2_INCLUDE_DIR:PATH=${prefix}/include/freetype2 \
                     -DFreeType2_LIBRARIES:FILEPATH=${prefix}/lib/libfreetype.dylib \
                     -DZLIB_INCLUDE_DIR:PATH=${prefix}/include \
                     -DZLIB_LIBRARY:FILEPATH=${prefix}/lib/libz.dylib \
-                    -DQT_ZLIB_LIBRARY:FILEPATH=${prefix}/lib/libz.dylib \
                     -DICONV_INCLUDE_DIR:PATH=${prefix}/include \
                     -DICONV_LIBRARIES:FILEPATH=${prefix}/lib/libiconv.dylib \
                     -DOPENSSL_CRYPTO_LIBRARIES:FILEPATH=${prefix}/lib/libcrypto.dylib \
                     -DOPENSSL_INCLUDE_DIR:PATH=${prefix}/include/openssl \
                     -DOPENSSL_SSL_LIBRARIES:FILEPATH=${prefix}/lib/libssl.dylib \
-                    -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake
+                    ${qt_cmake_defines}
+
 configure.args      .
 
 # This post-destroot phase is similar to the 'make macosx_bundle' target,
