Changes to use qt4 portgroup.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72633 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/qfsm/Portfile
+++ b/dports/science/qfsm/Portfile
@@ -28,10 +28,8 @@ post-patch {
 }
 
 variant qt_mac conflicts qt_x11 description {build with qt4-mac} {
-    depends_lib-append port:qt4-mac
-    configure.args  \
-        -DQT_LIBRARY_DIR=${prefix}/libexec/qt4-mac/lib \
-        -DQT_QMAKE_EXECUTABLE=${prefix}/libexec/qt4-mac/bin/qmake
+    PortGroup qt4 1.0
+    configure.args-append ${qt_cmake_defines}
 }
 
 variant qt_x11 conflicts qt_mac description {build with qt4-x11} {
